<resources>
    <!-- Action -->
    <string name="action_search">Search</string>
    <string name="settings">Настройки</string>

    <!-- App -->
    <string name="app">Приложениe</string>
    <string name="app_about">для заказа и доставки еды</string>
    <string name="app_name">Beerhoven</string>

    <!-- Authentication -->
    <string name="auth_failed">Проверка подлинности не удалась</string>
    <string name="auth_text_confirm">Дождитесь подтверждения</string>
    <string name="auth_phone_number_wrong">Неверный номер телефона</string>
    <string name="auth_quota_exceeded">Превышение квоты доступа</string>
    <!--    <string name="auth_user_success">Пользователь аутентифицирован</string>-->
    <!--    <string name="auth_user_failed">Пользователь не существует</string>-->

    <!-- Cart -->
    <string name="cart_add">Добавить в корзину</string>
    <string name="cart_add_success">Товар добавлен в корзину</string>
    <string name="cart_empty">Корзина пуста</string>
    <string name="cart_total">Сумма корзины</string>
    <string name="cart_update">обновить данные товара</string>

    <!-- Menu -->
    <string name="menu_admin">Администратор</string>
    <string name="menu_add_news">Добавление новостей</string>
    <string name="menu_add_product">Добавление товара</string>
    <string name="menu_cart">Корзина заказа</string>
    <string name="menu_client_orders">Заказа клиента</string>
    <string name="menu_close">Закрыть меню</string>
    <string name="menu_details">Детали товара</string>
    <string name="menu_client_order_details">Детали заказа клиента</string>
    <string name="menu_map">Карта</string>
    <string name="menu_news">Новости и акции</string>
    <string name="menu_news_details">Детали акции</string>
    <string name="menu_notifications">Уведомления</string>
    <string name="menu_order">Мои заказы</string>
    <string name="menu_user_name">Имя пользователя</string>
    <string name="menu_store">Магазин</string>

    <!-- Navigation -->
    <string name="nav_order_confirm">Подтверждение</string>
    <string name="nav_order_notify">Уведомление</string>

    <!-- News -->
    <string name="news_add">Добавить новость</string>
    <string name="news_add_success">Новость добавлена успешно</string>
    <string name="news_add_failed">Новость не добавлена</string>
    <string name="news_add_image">Загрузить изображение</string>
    <string name="news_add_image_success">Изображение добавлено успешно</string>
    <string name="news_add_image_failed">Изображение не добавлено </string>
    <string name="news_comment">Сделайте пост для уведомления пользователей приложения о новостях магазина</string>
    <string name="news_description">Описание</string>
    <string name="news_post_date">Дата новостей</string>
    <string name="news_post_desc">Описание поста</string>
    <string name="news_post_post">Заголовок поста</string>
    <string name="news_post_public">Опубликовать новость</string>
    <string name="news_post_title">Заголовок поста</string>

    <!-- News dialog alert -->
    <string name="dialog_btn_camera">Камера</string>
    <string name="dialog_btn_default">Изображение логотипа</string>
    <string name="dialog_btn_gallery">Галерея</string>
    <string name="dialog_description">Выберите способ загрузки изображения</string>

    <!-- Order -->
    <string name="order_address">Адресс заказа</string>
    <string name="order_confirmation">Подтверждение заказа</string>
    <string name="order_clarification">Уточнить заказ</string>
    <string name="order_date">Дата заказа</string>
    <string name="order_details">Заявка на заказ</string>
    <string name="order_details_specify">Пожалуйста, уточните детали заказа</string>
    <string name="order_form">Подать заявку</string>
    <string name="order_make">сделать заказ</string>
    <string name="order_name">Имя заказа</string>
    <string name="order_notification">Спасибо за заказ</string>
    <string name="order_phone">Телефон заказа</string>
    <string name="order_phone_number">Номер телефона</string>
    <string name="order_received">Заказ получен</string>
    <string name="order_received_already">Заказ получен</string>
    <string name="order_recipient_name">Имя получателя заказа</string>
    <string name="order_recipient_address">Адресс получателя заказа</string>
    <string name="order_recipient_number">Телефон получателя заказа</string>
    <string name="order_sent_success">Ваш заказ успешно отправлен</string>
    <string name="order_sent_failed">Ошибка отправки заказа</string>
    <string name="order_time">Время заказа</string>
    <string name="order_total">Общая стоимость заказа</string>
    <string name="order_waiting">Ваш заказ получен, ожидайте доставки…</string>

    <!-- Product -->
    <string name="product_add">Добавить товар</string>
    <string name="product_add_cart">Товар добавлен в корзину</string>
    <string name="product_add_database">Товар добавлен в базу данных</string>
    <string name="product_capacity">Объём/масса</string>
    <string name="product_category">Категория товара</string>
    <string name="product_category_select">Выберите категорию товара</string>
    <string name="product_country">Страна производитель</string>
    <string name="product_catalog_delete">Товар удален</string>
    <string name="product_density">Плотность</string>
    <string name="product_description">Описание</string>
    <string name="product_delivery_time">время доставки</string>
    <string name="product_fortress">Крепость</string>
    <string name="product_image">Загрузить изображение товара</string>
    <string name="product_info_update">Обновить данные товара</string>
    <string name="product_name">Название товара</string>
    <string name="product_price">Цена товара</string>
    <string name="product_price_line">Цена товара: </string>
    <string name="product_special">Специализация</string>
    <string name="product_style">Стиль</string>
    <string name="product_title">Название товара</string>
    <string name="product_total">общая цена</string>
    <string name="product_quantity">количество</string>

    <string name="product_details_open">открыть детали</string>
    <string name="product_delete">удалить из каталога</string>

    <!-- Product add card -->
    <string name="add_product_card">Карточка добавления товара</string>
    <string name="add_data_base">Добавить в базу данных</string>
    <string name="add_gallery_image">Добавить изображение из галлерии</string>
    <string name="add_image">Добавьте изображение</string>
    <string name="add_image_inside">Изображение добавлено</string>
    <string name="add_camera_photo">Добавить снимок с камеры</string>
    <string name="add_photo">Добавьте снимок</string>

    <!-- Registration -->
    <string name="reg_description">Для полноценного использования приложения необходимо пройти регистрацию</string>
    <string name="registration">Регистрация</string>
    <string name="reg_success">Регистрация прошла успешно</string>
    <string name="reg_account_success">Ваш аккаунт успешно создан</string>
    <string name="reg_name">Ваше Имя</string>
    <string name="req_email">Email</string>
    <string name="reg_phone_number">Номер телефона</string>

    <!-- Validation -->
    <string name="invalid_form">Заполните форму</string>
    <string name="invalid_field">Поле не должно быть пустым</string>
</resources>