<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news_list"
            android:icon="@drawable/ic_baseline_house_24"
            android:title="@string/menu_news"
            app:actionViewClass="android.widget.TextView" />
        <item
            android:id="@+id/nav_store"
            android:icon="@drawable/ic_baseline_shop_24"
            android:title="@string/menu_store" />
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_baseline_checklist_24"
            android:title="@string/menu_order"
            app:actionViewClass="android.widget.TextView" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_baseline_shopping_cart_24"
            android:title="@string/menu_cart"
            app:actionViewClass="android.widget.TextView" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_baseline_add_location_24"
            android:title="@string/menu_map" />
    </group>

    <item android:title="@string/menu_admin">
        <menu>
            <item
                android:id="@+id/nav_add_news"
                android:icon="@drawable/ic_add_store_news"
                android:title="@string/news_add" />
            <item
                android:id="@+id/nav_add_product"
                android:icon="@drawable/ic_add_product"
                android:title="@string/product_add" />
            <item
                android:id="@+id/nav_notifications"
                android:icon="@drawable/ic_baseline_notifications_24"
                android:title="@string/menu_notifications"
                app:actionViewClass="android.widget.TextView" />
        </menu>
    </item>
</menu>