<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_store">

    <fragment
        android:id="@+id/nav_store"
        android:name="ru.mobile.beerhoven.presentation.ui.store.sections.StoreFragment"
        android:label="@string/menu_store"
        tools:layout="@layout/fragment_store">
        <action
            android:id="@+id/action_nav_store_to_nav_details"
            app:destination="@id/nav_details" />
    </fragment>

    <fragment
        android:id="@+id/nav_details"
        android:name="ru.mobile.beerhoven.presentation.ui.store.details.ProductDetailFragment"
        android:label="@string/menu_details"
        tools:layout="@layout/fragment_details">
        <argument
            android:name="productID"
            android:defaultValue="default"
            app:argType="string" />
        <argument
            android:name="name"
            android:defaultValue="default"
            app:argType="string" />
        <argument
            android:name="country"
            android:defaultValue="default"
            app:argType="string" />
        <argument
            android:name="manufacture"
            android:defaultValue="default"
            app:argType="string" />
        <argument
            android:name="price"
            android:defaultValue="default" />
        <argument
            android:name="style"
            android:defaultValue="default"
            app:argType="string" />
        <argument
            android:name="fortress"
            android:defaultValue="default"
            app:argType="string" />
        <argument
            android:name="density"
            android:defaultValue="default"
            app:argType="string" />
        <argument
            android:name="description"
            android:defaultValue="default"
            app:argType="string" />
        <argument
            android:name="image"
            android:defaultValue="default"
            app:argType="string" />
        <argument
            android:name="change"
            android:defaultValue="default"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/nav_cart"
        android:name="ru.mobile.beerhoven.presentation.ui.cart.CartFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/fragment_cart">
        <action
            android:id="@+id/action_nav_cart_to_nav_details"
            app:destination="@id/nav_details" />
        <action
            android:id="@+id/action_nav_cart_to_nav_order_confirm"
            app:destination="@id/nav_order_confirm" />
    </fragment>
    <fragment
        android:id="@+id/nav_order"
        android:name="ru.mobile.beerhoven.presentation.ui.orders.order.OrderFragment"
        android:label="@string/menu_order"
        tools:layout="@layout/fragment_order">
        <argument
            android:name="ID"
            app:argType="string"
            android:defaultValue="default" />
        <action
            android:id="@+id/action_nav_order_to_nav_order_details"
            app:destination="@id/nav_order_details" />
    </fragment>
    <fragment
        android:id="@+id/nav_order_details"
        android:name="ru.mobile.beerhoven.presentation.ui.orders.details.OrderDetailFragment"
        android:label="@string/order_details"
        tools:layout="@layout/fragment_order_details">
        <argument
            android:name="userID"
            android:defaultValue="default"
            app:argType="string" />
        <argument
            android:name="orderKey"
            android:defaultValue="default"
            app:argType="string" />
        <action
            android:id="@+id/action_nav_order_details_to_nav_details"
            app:destination="@id/nav_details" />
    </fragment>
    <fragment
        android:id="@+id/nav_add_product"
        android:name="ru.mobile.beerhoven.presentation.ui.adding.AddProductFragment"
        android:label="@string/menu_add_product"
        tools:layout="@layout/fragment_add_product" />
    <fragment
        android:id="@+id/nav_order_confirm"
        android:name="ru.mobile.beerhoven.presentation.ui.orders.confirm.OrderConfirmFragment"
        android:label="@string/nav_order_confirm"
        tools:layout="@layout/fragment_order_confirm">
        <argument
            android:name="total"
            android:defaultValue="default"
            app:argType="string" />
        <action
            android:id="@+id/action_nav_order_confirm_to_nav_order_notify"
            app:destination="@id/nav_order_notify" />
    </fragment>
    <fragment
        android:id="@+id/nav_order_notify"
        android:name="ru.mobile.beerhoven.presentation.ui.orders.notify.OrderNotifyFragment"
        android:label="@string/nav_order_notify"
        tools:layout="@layout/fragment_order_notify" >
        <action
            android:id="@+id/action_nav_order_notify_to_nav_store"
            app:destination="@id/nav_store" />
    </fragment>
    <fragment
        android:id="@+id/nav_notifications"
        android:name="ru.mobile.beerhoven.presentation.ui.notifications.notification.NotificationFragment"
        android:label="@string/menu_notifications"
        tools:layout="@layout/fragment_notification" >
        <action
            android:id="@+id/action_nav_notifications_to_nav_order"
            app:destination="@id/nav_order" />
    </fragment>
    <fragment
        android:id="@+id/nav_map"
        android:name="ru.mobile.beerhoven.presentation.ui.map.ClientMapFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_client_map" >
    </fragment>
    <fragment
        android:id="@+id/nav_news"
        android:name="ru.mobile.beerhoven.presentation.ui.user.news.corporate.NewsListFragment"
        android:label="@string/menu_news"
        tools:layout="@layout/fragment_news_list" />
    <fragment
        android:id="@+id/nav_add_news"
        android:name="ru.mobile.beerhoven.presentation.ui.owner.post.AddNewsFragment"
        android:label="@string/menu_add_news"
        tools:layout="@layout/fragment_add_news" />
</navigation>