<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_form"
    tools:context=".presentation.ui.admin.post.news.AddNewsFragment">

    <LinearLayout
        android:id="@+id/btn_cancel_container"
        android:layout_width="51dp"
        android:layout_height="48dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.986"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/circle_red"
            app:srcCompat="@drawable/ic_clear"
            tools:ignore="ContentDescription,MissingConstraints,ImageContrastCheck" />
    </LinearLayout>

    <TextView
        android:id="@+id/dialog_desc"
        android:layout_width="284dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/dialog_description"
        android:textAlignment="center"
        android:textColor="@color/colorMainBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="16dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_camera"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="40dp"
        android:stateListAnimator="@null"
        android:text="@string/dialog_btn_camera"
        android:textAllCaps="false"
        android:textColor="@color/colorMainBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toBottomOf="@+id/dialog_desc"
        app:layout_constraintVertical_bias="1.0"
        app:strokeColor="@color/colorMainGrey" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_gallery"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="151dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:stateListAnimator="@null"
        android:text="@string/dialog_btn_gallery"
        android:textAllCaps="false"
        android:textColor="@color/colorMainBlue"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_desc"
        app:strokeColor="@color/colorMainGrey" />
</androidx.constraintlayout.widget.ConstraintLayout>