<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme.CardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="15dp"
    android:layout_marginRight="10dp"
    app:cardBackgroundColor="@color/colorWhite"
    app:cardCornerRadius="@dimen/size_corner_radius"
    app:cardElevation="@dimen/size_card_elevation">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="5dp">

        <LinearLayout
            android:id="@+id/tvOrderContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/ivOrderMarker"
                    android:layout_width="93dp"
                    android:layout_height="95dp"
                    android:layout_marginEnd="35dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/local"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.111"
                    tools:ignore="ContentDescription,VectorDrawableCompat" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toStartOf="@+id/ivOrderMarker"
                    app:layout_constraintStart_toStartOf="parent">

                    <LinearLayout
                        android:layout_width="185dp"
                        android:layout_height="122dp"
                        android:orientation="vertical"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:layout_editor_absoluteY="0dp">

                        <TextView
                            android:id="@+id/tvOrderDate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/roboto_bold"
                            android:text="@string/order_date"
                            android:textColor="@color/colorMainGrey"
                            android:textSize="@dimen/text_size_s" />

                        <TextView
                            android:id="@+id/tvOrderTime"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:fontFamily="@font/roboto_bold"
                            android:text="@string/order_time"
                            android:textColor="@color/colorMainGrey"
                            android:textSize="@dimen/text_size_s" />

                        <TextView
                            android:id="@+id/tvOrderPhone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:fontFamily="@font/catorze27_style1_semibold"
                            android:text="@string/order_phone"
                            android:textColor="@color/colorMainGrey"
                            android:textSize="@dimen/text_size_m" />

                        <TextView
                            android:id="@+id/tvOrderAddress"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/catorze27_style1_semibold"
                            android:text="@string/order_address"
                            android:textColor="@color/colorMainGrey"
                            android:textSize="@dimen/text_size_l" />
                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <ImageView
                    android:id="@+id/ivOrderDelete"
                    android:layout_width="29dp"
                    android:layout_height="29dp"
                    android:background="@drawable/circle_red"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/ic_clear"
                    tools:ignore="ContentDescription,MissingConstraints" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0">

                    <TextView
                        android:id="@+id/tvOrderCommon"
                        android:layout_width="140dp"
                        android:layout_height="26dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="6dp"
                        android:fontFamily="@font/catorze27_style1_semibold"
                        android:text="@string/order_total"
                        android:textColor="@color/colorMainGrey"
                        android:textSize="@dimen/text_size_s"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:ignore="HardcodedText,SpUsage" />

                    <TextView
                        android:id="@+id/tvOrderTotal"
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:fontFamily="@font/roboto_bold"
                        android:text="2222"
                        android:textColor="@color/colorVioletBlue"
                        android:textSize="@dimen/text_size_m"
                        tools:ignore="HardcodedText" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>