<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.MaterialComponents.CardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="15dp"
    android:layout_marginRight="10dp"
    app:cardCornerRadius="17dp"
    app:cardElevation="10dp"
    tools:context=".presentation.ui.user.store.catalog.CatalogFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/llProductContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:orientation="vertical"
            android:padding="10dp"
            tools:ignore="KeyboardInaccessibleWidget">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="150dp">

                <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/ivProductImage"
                    android:layout_width="107dp"
                    android:layout_height="116dp"
                    android:layout_marginEnd="36dp"
                    android:elevation="5sp"
                    app:civ_shadow_radius="2sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ImageContrastCheck" />

                <LinearLayout
                    android:id="@+id/llParent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="5dp"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="MissingConstraints,RtlHardcoded,RtlSymmetry"
                    tools:layout_editor_absoluteY="0dp">

                    <TextView
                        android:id="@+id/tvProductName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/catorze27_style1_bold"
                        android:text="@string/product_title"
                        android:textColor="@color/colorMainBlack"
                        android:textSize="25sp"
                        tools:ignore="UnusedAttribute" />

                    <TextView
                        android:id="@+id/tvProductStyle"
                        android:layout_width="182dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/catorze27_style1_semibold"
                        android:text="@string/product_style"
                        android:textColor="@color/colorMainGrey" />

                    <TextView
                        android:id="@+id/tvProductFortress"
                        android:layout_width="182dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/catorze27_style1_semibold"
                        android:text="@string/product_fortress"
                        tools:ignore="SpUsage,UnusedAttribute,TextContrastCheck" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.12"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="RtlHardcoded,RtlSymmetry">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvProductPrice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/roboto_bold"
                            android:text="100 руб."
                            android:textColor="@color/colorVioletBlue"
                            android:textSize="16sp"
                            tools:ignore="HardcodedText" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_regular"
                            android:text="@string/product_price"
                            android:textColor="@color/colorVioletBlue"
                            android:textSize="@dimen/text_size_s" />
                    </LinearLayout>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/split"
                        tools:ignore="ContentDescription,ImageContrastCheck" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvDeliveryTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/roboto_bold"
                            android:text="25 мин."
                            android:textColor="@color/colorVioletBlue"
                            android:textSize="16sp"
                            tools:ignore="HardcodedText,UnusedAttribute" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/roboto_regular"
                            android:text="@string/product_delivery_time"
                            android:textColor="@color/colorVioletBlue"
                            android:textSize="@dimen/text_size_s" />
                    </LinearLayout>
                </LinearLayout>

                <ImageView
                    android:id="@+id/ivSelectorAddProduct"
                    android:layout_width="29dp"
                    android:layout_height="46dp"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:srcCompat="@drawable/ic_cross_add"
                    tools:ignore="ContentDescription" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>